# SteelSidekick

./: .gitignore  .gitmodules  README.md
Android/: build.gradle  settings.gradle
Android/app/: CMakeLists.txt  build.gradle
Android/app/src/androidTest/java/com/steelsidekick/steelsidekick/: ExampleInstrumentedTest.java
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/assets/: Chords.settings  Scales.settings
Android/app/src/main/assets/Guitars/Lap Steel/: C6 (6-String)  High G  (6-String)  Open G  (6-String)
Android/app/src/main/assets/Guitars/Pedal Steel/: Universal (12-String)
Android/app/src/main/cpp/: CMakeLists.txt  sguitar.cpp
Android/app/src/main/java/com/steelsidekick/steelsidekick/: ChordActivity.java  GLNativeInterface.java  GuitarActivity.java  GuitarSelectActivity.java  GuitarSelectAdapter.java  GuitarSelectItem.java  MainActivity.java  MainActivity.kt  SGuitarCanvasView.java  ScaleActivity.java  Util.java
Android/app/src/main/res/layout/: activity_chord.xml  activity_guitar.xml  activity_guitar_select.xml  activity_main.xml  activity_scale.xml  content_main.xml  layout_guitar.xml
Android/app/src/main/res/layout-land/: activity_main.xml  content_main.xml
Android/app/src/main/res/menu/: menu_main.xml
Android/app/src/main/res/values/: strings.xml  themes.xml
Android/app/src/main/res/values-night/: themes.xml
Android/app/src/test/java/com/steelsidekick/steelsidekick/: ExampleUnitTest.java
Resources/Settings/: Chords.settings  GuitarTypes.settings
SGuitar/: run_djinni.sh  sguitar.djinni
SGuitar/include/: SCustomGuitar.hpp  SGuitar.h  SGuitar.hpp
SGuitar/src/: Chord.cpp  Chord.mm  ChordOptions.cpp  ChordOptions.mm  ChordType.cpp  Chords.cpp  FileUtils.cpp  FileUtils_Android.cpp  FileUtils_iOS.mm  Guitar.cpp  GuitarAdjustment.cpp  GuitarAdjustmentType.cpp  GuitarAdjustmentType.mm  GuitarCanvas.cpp  GuitarOptions.cpp  GuitarOptions.mm  GuitarString.cpp  GuitarType.cpp  GuitarTypes.cpp  Guitars.cpp  NSArrayIntVector.h  NSArrayIntVector.mm  NSArrayNoteValueVector.h  NSArrayStdStringVector.h  NSArrayStdStringVector.mm  NSArrayVector.h  Note.cpp  NoteName.cpp  NoteName.mm  OptionTypes.cpp  SCustomGuitar.cpp  SGuitar.cpp  SGuitar.mm  SGuitar_c.cpp  Scale.cpp  Scale.mm  ScaleOptions.cpp  ScaleOptions.mm  ScaleType.cpp  Scales.cpp  (+1 more)
SGuitar/swig/: .gitignore  SGuitar.i  swig.sh
iOS/Settings.bundle/: Root.plist
iOS/SteelSidekick/: AboutTableViewController.h  AboutTableViewController.m  AppDelegate.h  AppDelegate.m  ChordTypeViewController.h  ChordTypeViewController.m  ChordViewController.h  ChordViewController.m  ChordViewController.mm  ColorScheme.h  ColorScheme.m  ColorSchemeViewController.h  ColorSchemeViewController.m  CustomGuitar.h  CustomGuitar.mm  CustomGuitarViewController.h  CustomGuitarViewController.mm  FileUtils_iOS.mm  FlatColorPalette.h  FlatColorPalette.m  Globals.h  GuitarAdjustmentViewController.h  GuitarAdjustmentViewController.mm  GuitarNameTableViewCell.h  GuitarNameTableViewCell.m  GuitarPlayer.h  GuitarPlayer.mm  GuitarViewController.h  GuitarViewController.m  GuitarViewController.mm  Info.plist  InfoViewController.h  InfoViewController.m  InfoViewController.swift  MIDIPlayer.swift  NSArrayNoteValueVector.mm  NSArrayVector.mm  RootNoteViewController.h  RootNoteViewController.m  SGuitar.h  (+18 more)
iOS/SteelSidekick.xcodeproj/: project.pbxproj
iOS/SteelSidekickTests/: Chords-Test.settings  Guitar-Test.json  GuitarTypes.settings  SGGuitarTests.mm  SteelSidekickTests.m  TestScaleChord.mm
iOS/SteelSidekickUITests/: SteelSidekickUITests.m
macOS/: SteelSidekick-Bridging-Header.h
macOS/SteelSidekick/: AppDelegate.swift  Info.plist  ScaleViewController.swift  SwiftOpenGLView.swift  ViewController.swift  WindowController.swift
macOS/SteelSidekick.xcodeproj/: project.pbxproj
(+158 files in other folders)
